--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        tools:replace="android:name"
         android:name=".MyApp"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activity.MainActivity">
