--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleDependency
 apply plugin: 'com.android.application'
 apply plugin: 'com.mob.sdk'
 
@@ -32,7 +33,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -42,5 +43,7 @@ dependencies {
     implementation 'com.noober.backgorund:core:1.0.1'
     implementation 'org.xutils:xutils:3.5.0'
     implementation 'com.github.liupeng110:Toasty:1.3.1'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.alibaba:fastjson:1.1.70.android'
 
 }
